fix column gap 90 to 110 to make layout consistent across browswer

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ form{
     flex-wrap: wrap;
     width: 100vh;
     row-gap: 20px;
-    column-gap: 90px;
+    column-gap: 110px;
 }
 
 input,label{
